--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,4 +11,8 @@ dependencies = [
     "gunicorn>=23.0.0",
     "psycopg2-binary>=2.9.10",
     "flask-wtf>=1.2.2",
+    "werkzeug>=3.1.3",
+    "wtforms>=3.2.1",
+    "twilio>=9.4.5",
+    "sqlalchemy>=2.0.38",
 ]
